OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Onboarding_Req_Template__c/Vendor_Program_Onboarding_Req_Template__c.object-meta.xml
<CustomObject>
    <description>The “atomic” requirement template (like NDA, Insurance, Training).</description>
    <label>Vendor Program Onboarding Req Template</label>
    <nameField>
        <displayFormat>VPORT-{00000}</displayFormat>
        <label>Vendor Program Onboarding Requirement Te</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Program Onboarding Req Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>