OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Onboarding_Req_Template__c/fields/Category_Group__c.field-meta.xml
<CustomField>
    <fullName>Category_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category Group</label>
    <referenceTo>Vendor_Program_Requirement_Group__c</referenceTo>
    <relationshipName>Category_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>