OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Onboarding_Req_Template__c/fields/Default_Status_Options__c.field-meta.xml
<CustomField>
    <fullName>Default_Status_Options__c</fullName>
    <label>Default Status Options</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Onboarding_Status_Picklist_Options</valueSetName>
    </valueSet>
</CustomField>