OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Onboarding_Req_Template__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>What is this requirement</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>