OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Onboarding_Req_Template__c/fields/Is_Current_Version__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Version__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Current Version</label>
    <type>Checkbox</type>
</CustomField>