OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Onboarding_Req_Template__c/fields/Onboarding_Requirement_Set__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Requirement_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Requirement Set Deprecated</label>
    <referenceTo>Onboarding_Requirement_Set__c</referenceTo>
    <relationshipLabel>Vendor Program Onboarding Req Templates</relationshipLabel>
    <relationshipName>Vendor_Program_Onboarding_Req_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>