OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Onboarding_Req_Template__c/fields/Onboarding_Status_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status_Field_API_Name__c</fullName>
    <label>Onboarding Status Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>