OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Onboarding_Req_Template__c/fields/Onboarding_Status_Value_When_Complete__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status_Value_When_Complete__c</fullName>
    <label>Onboarding Status Value When Complete</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>