OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Onboarding_Req_Template__c/fields/Previous_Version__c.field-meta.xml
<CustomField>
    <fullName>Previous_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Version</label>
    <referenceTo>Vendor_Program_Onboarding_Req_Template__c</referenceTo>
    <relationshipName>Previous_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>