OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Onboarding_Req_Template__c/fields/Requirement_Label__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Label__c</fullName>
    <description>Requirement label (e.g., “NDA”, &quot;Driver&apos;s License&quot;, &quot;General Liability Insurance&quot;)</description>
    <label>Requirement Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>