OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Onboarding_Req_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Requirement_Label__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>